Update blog portion and footer part completed

--- a/22_utubeBlog/views/login.ejs
+++ b/22_utubeBlog/views/login.ejs
@@ -62,6 +62,10 @@
       </div>
     </div>
 
+    <!-- Footer -->
+    <%- include('./partials/foot.ejs') %>
+    <!-- Footer -->
+
     <%- include('./partials/script.ejs') %>
   </body>
 </html>
