--- a/22_utubeBlog/views/signup.ejs
+++ b/22_utubeBlog/views/signup.ejs
@@ -60,6 +60,10 @@
       </div>
     </div>
 
+    <!-- Footer -->
+    <%- include('./partials/foot.ejs') %>
+    <!-- Footer -->
+
     <%- include('./partials/script.ejs') %>
   </body>
 </html>
