--- a/22_utubeBlog/views/addBlogs.ejs
+++ b/22_utubeBlog/views/addBlogs.ejs
@@ -12,10 +12,12 @@
     <%- include('./partials/navbar.ejs') %>
     <!-- NavBar -->
 
-    <% {locals.user} %>
+    <% if (locals.error) { %>
+      <div class="alert alert-danger" role="alert"><%= locals.error %></div>
+    <% } %>
 
     <!-- Add Blogs -->
-    <div class="vh-100 d-flex justify-content-center">
+    <div class="vh-100 d-flex justify-content-center mt-3">
       <div class="col-12 col-lg-8">
         <form
           class="border border-2 bg-light"
@@ -48,6 +50,7 @@
                 name="body"
                 rows="8"
                 style="resize: none"
+                required
               ></textarea>
             </div>
             <div class="mb-3">
