--- a/22_utubeBlog/views/partials/navbar.ejs
+++ b/22_utubeBlog/views/partials/navbar.ejs
@@ -43,7 +43,7 @@
                 <a class="dropdown-item" href="/api/v1/auth/logout">Logout</a>
               </li>
               <li>
-                <a class="dropdown-item" href="#">Profile</a>
+                <a class="dropdown-item" href="/api/v1/blog/profile/<%= locals.user._id %>">Profile</a>
               </li>
             <% } else {%>
             <li>
